Added Vault server Updated README

--- a/puppet/environments/production/data/nodes/server-dc1-1.yaml
+++ b/puppet/environments/production/data/nodes/server-dc1-1.yaml
@@ -9,3 +9,4 @@ profile::nomad::server::node_name: 'nomad_server'
 roles:
   - role::nomad::server
   - role::consul::server
+  - role::vault::server
